<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/dark_main"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_alert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/alert_title"
        android:textColor="@color/dark_font_light"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_alert_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_font_light"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/tv_alert_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/custom_alert_message" />

            <TextView
                android:id="@+id/btn_alert_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_font_light"
                android:textSize="14sp"
                android:layout_margin="16dp"
                android:layout_gravity="end"
                android:padding="8dp"
                android:text="@string/ok" />

        </LinearLayout>



    </ScrollView>



</LinearLayout>