<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_main_light"
        android:elevation="3dp"
        android:layout_margin="8dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_list_poster"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_movies" />

        <TextView
            android:id="@+id/tv_list_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_of_the_movie"
            android:textSize="16sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="4dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/accentSecondary"
            app:layout_constraintStart_toEndOf="@+id/iv_list_poster"
            app:layout_constraintEnd_toStartOf="@+id/tv_arrow"
            app:layout_constraintTop_toTopOf="@+id/iv_list_poster" />

        <TextView
            android:id="@+id/tv_list_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="@color/dark_font_dark"
            app:layout_constraintStart_toEndOf="@+id/iv_list_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_title" />

        <TextView
            android:id="@+id/tv_list_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textColor="@color/dark_font_dark"
            app:layout_constraintStart_toEndOf="@+id/iv_list_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_year" />

        <TextView
            android:id="@+id/tv_list_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginEnd="8dp"
            android:text="@string/overview"
            android:textColor="@color/dark_font_light"
            app:layout_constraintStart_toEndOf="@+id/iv_list_poster"
            app:layout_constraintEnd_toStartOf="@+id/tv_arrow"
            app:layout_constraintTop_toBottomOf="@+id/tv_list_rating" />

        <ImageView
            android:id="@+id/tv_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>